# Mecanum-Wheel-Robot

./: .gitignore  MIGRATION_GUIDE.md  README.md  analyze_packets.py  analyze_sniff.py  configure_and_test.py  confirmed_protocol.py  debug_serial.py  final_brute.py  fuzz_advanced.py  fuzz_all_cmds.py  fuzz_motor.py  fuzz_motor_v2.py  fuzz_protocol_format.py  interactive_brute.py  manual_hex.py  read_board_state.py  scan_commands.py  scan_feedback.py  scan_protocols.py  simple_spin.py  sniff_serial.py  test_cartype_scan.py  test_crawl.py  test_diagonal.py  test_diagonal_spin.py  test_driver.py  test_gentle_ramp.py  test_idle_stress.py  test_motion_single.py  test_motion_stress.py  test_motor_direct.py  test_movement.py  test_protocol_move.py  test_safe_ramp_port2.py
.cursor/commands/: new-requirement.md
.github/workflows/: ros2_ci.yml
android_app/: .gitignore  README.md  build.gradle.kts  robot_app_prompt.md  settings.gradle.kts
android_app/app/: build.gradle.kts
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/kotlin/com/varunvaidhiya/robotcontrol/: MainActivity.kt  (+1 more)
android_app/app/src/main/res/drawable/: ic_assignment.xml  ic_gamepad.xml  ic_map.xml  ic_settings.xml  shape_circle_green.xml  shape_circle_orange.xml  shape_circle_red.xml
android_app/app/src/main/res/layout/: activity_main.xml  fragment_controls.xml  fragment_dashboard.xml  fragment_logs.xml  fragment_settings.xml  fragment_slam_map.xml
android_app/app/src/main/res/menu/: bottom_nav_menu.xml
android_app/app/src/main/res/navigation/: mobile_navigation.xml
android_app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
data_engine/: README.md  requirements.txt  setup.py  vla_data_engine_prompt.md  walkthrough.md.resolved
data_engine/ingestion/: bag_to_hdf5.py  ros_parser.py  sync_topics.py
data_engine/loader/: dataset.py
data_engine/schema/: constants.py  format.py  validator.py
data_engine/scripts/: benchmark_loader.py  ingest_dataset.py  validate_dataset.py
data_engine/tests/: test_dataset.py  test_ingestion.py  test_schema.py
data_engine/visualization/: visualize_episode.py
docs/: running_full_system.md  system_workflow.md  vla_distributed_setup.md  xbox_setup.md
infra/: README.md
infra/ci/: test_all.sh
infra/devcontainers/: devcontainer.json
infra/docker/: Dockerfile
install/: local_setup.sh  setup.sh
install/omnibot_bringup/share/ament_index/resource_index/package_run_dependencies/: omnibot_bringup
install/omnibot_bringup/share/omnibot_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/omnibot_bringup/share/omnibot_bringup/cmake/: omnibot_bringupConfig-version.cmake  omnibot_bringupConfig.cmake
install/omnibot_bringup/share/omnibot_bringup/config/: omnibot.rviz
install/omnibot_bringup/share/omnibot_bringup/environment/: ament_prefix_path.dsv  path.dsv
install/omnibot_bringup/share/omnibot_bringup/launch/: display.launch.py  robot.launch.py
install/omnibot_description/share/omnibot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
install/omnibot_description/share/omnibot_description/cmake/: omnibot_descriptionConfig-version.cmake  omnibot_descriptionConfig.cmake
install/omnibot_description/share/omnibot_description/environment/: ament_prefix_path.dsv  path.dsv
install/omnibot_description/share/omnibot_description/urdf/: omnibot.urdf.xacro
log/: latest_build
robot_ws/src/: README.md
robot_ws/src/omnibot_bringup/: package.xml
robot_ws/src/omnibot_bringup/config/: omnibot.rviz
robot_ws/src/omnibot_bringup/launch/: bringup_with_xbox.launch.py  display.launch.py  robot.launch.py  robot_with_joy.launch.py
robot_ws/src/omnibot_description/: package.xml
robot_ws/src/omnibot_description/urdf/: omnibot.urdf.xacro
robot_ws/src/omnibot_driver/: CMakeLists.txt  package.xml
robot_ws/src/omnibot_driver/include/omnibot_driver/: mecanum_controller.hpp
robot_ws/src/omnibot_driver/launch/: base_control.launch.py
robot_ws/src/omnibot_driver/scripts/: yahboom_controller_node.py  yahboom_test_node.py
robot_ws/src/omnibot_firmware/Core/Inc/: main.h
robot_ws/src/omnibot_firmware/Core/Src/: main.c  usart.c
robot_ws/src/omnibot_navigation/: CMakeLists.txt  README.md  package.xml
robot_ws/src/omnibot_navigation/config/: nav2_params.yaml  robot_localization.yaml  sensor_integration.yaml  waypoints.yaml
robot_ws/src/omnibot_navigation/docs/: SENSOR_INTEGRATION.md
robot_ws/src/omnibot_navigation/launch/: autonomous_navigation.launch.py  autonomous_with_waypoints.launch.py  slam_toolbox.launch.py
robot_ws/src/omnibot_vla/: README.md  package.xml  setup.py
robot_ws/src/omnibot_vla/launch/: vla_desktop.launch.py
robot_ws/src/omnibot_vla/omnibot_vla/: vla_node.py
robot_ws/src/omnibot_vla/test/: test_copyright.py  test_flake8.py  test_pep257.py
src/: README.md
src/omnibot_bringup/: CMakeLists.txt  package.xml
src/omnibot_bringup/config/: xbox_teleop.yaml
src/omnibot_bringup/launch/: joy_teleop.launch.py  robot.launch.py
src/omnibot_description/: CMakeLists.txt
src/omnibot_description/urdf/: omnibot.urdf.xacro
src/omnibot_driver/: CMakeLists.txt  package.xml
src/omnibot_driver/config/: mecanum_params.yaml  yahboom_params.yaml
src/omnibot_driver/launch/: yahboom_base_control.launch.py  yahboom_test.launch.py
src/omnibot_driver/scripts/: mecanum_controller_node.py  serial_bridge_node.py
src/omnibot_driver/src/: mecanum_controller.cpp
src/omnibot_firmware/: README.md
src/omnibot_firmware/Core/Src/: gpio.c  tim.c
src/omnibot_navigation/config/: slam_toolbox_params.yaml
src/omnibot_navigation/launch/: autonomous_robot.launch.py
src/omnibot_navigation/scripts/: test_autonomous.py  waypoint_navigator.py
vla_engine/: README.md  requirements.txt
vla_engine/inference/: schema.py  server.py
vla_engine/models/: base.py  openvla.py
vla_engine/tests/: test_server.py
vla_engine/utils/: image.py
(+29 files in other folders)
